History Log Starts After Release 0.2.0

Release 0.2.dev
===============
* Updated documentation and included installing South in the installation instructions
* Added hypotheses app.  This allows for the summary of experimental findings.  It links a manipulation to a change in a biological process or entity, and lists the context and evidence for and against such a hypothesis
* Added a URI field to the Cell model.  *This requires a migration of the reagents app*
* Added a dilution field for Antibodies *This requires a migration of the reagents app*
* Moved static files into static folder.  The media folder is only for uploaded files.
* Upgraded to be compatible with Django 1.3

Todo
----

* Audit model and view tests
* Write docstrings for all .py files
* Audit model and view docstrings
* Combine external.Reference model with the Mendeley API
* Need to migrate reagents_primer('protein_id' and 'id') into reagents_primer_protein

Before uploading
----------------

* change release number in setup.py and Docs/source/conf.py
* upload new release with::
    
	python setup.py sdist bdist_dumb bdist_msi register upload
	
* if need be run python setup.py without register and upload and then upload them manually
	
* tag new release with::
    
	svn copy https://experimentdb.googlecode.com/svn/trunk/ \ 
	  https://experimentdb.googlecode.com/svn/tags/release-0.2/ \
      -m "Tagging the 0.2 release."