@@ -8,13 +8,14 @@
  <thead>
  </thead>
  <tdata>
-  <tr><th>Construct</th><td>{{ object.construct }}</td></tr>
+  <tr><th>Construct</th><td>{{ object.name }}</td></tr>
   <tr><th>Plasmid</th><td>{{ object.plasmid }}</td></tr>
   <tr><th>Source</th><td>{{ object.source }}</td></tr>
   <tr><th>Location</th><td>{{ object.location }}</td></tr>
   <tr><th>Selection</th><td>{{ object.selection }}</td></tr>
   <tr><th>Box</th><td>{{ object.box }}</td></tr>
   <tr><th>Notes</th><td>{{ object.notes }}</td></tr>
+  {% if object.license %}<tr><th>Licence</th><td><a href="{{ object.license.get_absolute_url }}">{{ object.license }}</a></td></tr>{% endif %}
   </tdata>
  </table>
 {% if perms.reagents.change_construct %}<p>To update construct details click <a href="{% url construct-edit object.id %}"><img src="{{STATIC_URL}}img/icons/Document Write.png" width=25 alt="edit"></a></p>{% endif %}
