@@ -1,10 +1,14 @@
+"""This package contains views for the reagents app."""
+
 from django.shortcuts import render_to_response
 from django.template import RequestContext
 from django.contrib.auth.decorators import login_required
 from django.utils import simplejson
 from django.http import HttpResponse
+from django.utils.decorators import method_decorator
+from django.views.generic import DetailView, CreateView, UpdateView
 
-from experimentdb.reagents.models import Construct, Antibody, Chemical, Cell, Primer, Strain
+from experimentdb.reagents.models import Construct, Antibody, Chemical, Cell, Primer, Strain, License
 
 @login_required
 def index(request):
@@ -31,3 +35,47 @@ def antibody_lookup(request):
 				results = [ x.antibody for x in model_results ]
 	json = simplejson.dumps(results)
 	return HttpResponse(json, mimetype='application/json')
+    
+class LicenseDetail(DetailView):
+    """This view displays specific details about a :class:`~experimentdb.models.License` object as the license-detail.
+	
+    It takes a request in the form **/license/(id)**, or **/mta/(id)** and renders the detail page for that license.  
+    This page is restricted to logged-in users.
+    """
+    
+    model = License
+    template_name = 'license_detail.html'
+    context_object_name = 'license'
+    
+    @method_decorator(login_required)
+    def dispatch(self, *args, **kwargs):
+        """This decorator sets this view to have login restricted permissions."""
+        return super(LicenseDetail, self).dispatch(*args, **kwargs)
+
+class LicenseCreate(CreateView):
+    """This view generates a page to create a new :class:`~experimentdb.models.License` object.
+    
+    It takes a url in the form of **/license/new** and renders the form for a new license."""
+    
+    model = License
+    template_name = 'license_form.html'
+    context_object_name = 'license'
+    
+    @method_decorator(login_required)
+    def dispatch(self, *args, **kwargs):
+        """This decorator sets this view to have restricted permissions."""
+        return super(LicenseCreate, self).dispatch(*args, **kwargs)
+
+class LicenseUpdate(UpdateView):
+    """This view generates a page to create a new :class:`~experimentdb.models.License` object.
+    
+    It takes a url in the form of **/license/#/edit** and renders the form for altering a license."""
+    
+    model = License
+    template_name = 'license_form.html'
+    context_object_name = 'license'
+    
+    @method_decorator(login_required)
+    def dispatch(self, *args, **kwargs):
+        """This decorator sets this view to have restricted permissions."""
+        return super(LicenseUpdate, self).dispatch(*args, **kwargs)         
